Add Docker support with multi-stage build for Next.js application. Created Dockerfile, docker-compose.yml, and .dockerignore. Updated .env.example with new environment variables. Added cron service for scheduled jobs with Prisma integration.

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
+# Database
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/personalledgr?schema=public"
+POSTGRES_PASSWORD="postgres"
+
+# Better Auth
 BETTER_AUTH_SECRET="generate-with-openssl-rand-base64-32"
 BETTER_AUTH_URL="http://localhost:3000"
+
+# Docker
+APP_PORT=3000
