Update Docker configuration and database integration for finance application. Added PostgreSQL port mapping in docker-compose.yml, integrated Prisma with PostgreSQL adapter in database files, and updated seed and wipe scripts for improved database management. Refactored seed data generation to enhance compatibility with new database structure.

--- a/cron/Dockerfile
+++ b/cron/Dockerfile
@@ -11,4 +11,4 @@ COPY cron/ ./cron/
 
 RUN pnpm exec prisma generate
 
-CMD ["node", "--import", "tsx", "cron/src/index.ts"]
+CMD ["./node_modules/.bin/tsx", "cron/src/index.ts"]
