--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "db:wipe": "tsx src/db/run-wipe.ts",
     "test": "vitest run",
     "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "test:e2e": "playwright test"
   },
   "dependencies": {
     "@prisma/adapter-pg": "^7.4.1",
@@ -44,7 +45,12 @@
     ]
   },
   "devDependencies": {
+    "@playwright/test": "^1.58.2",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jsdom": "^28.0.0",
     "@types/node": "^20",
     "@types/node-cron": "^3.0.11",
     "@types/pg": "^8.16.0",
@@ -53,6 +59,7 @@
     "dotenv": "^17.3.1",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
+    "jsdom": "^28.1.0",
     "prisma": "^7.4.1",
     "shadcn": "^3.8.5",
     "tailwindcss": "^4",
